[package]
name = "gpu-interference-analysis-tool"
version = "0.1.0"
edition = "2024"

[profile.prod]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
askama = "0.15.6"
chrono = "0.4"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
humantime-serde = "1.1.1"
log = "0.4.29"
polars = { version = "0.53.0", features = ["lazy", "csv", "dtype-full", "temporal", "fmt", "strings", "is_in", "pivot", "polars-ops", "cum_agg"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
which = "8.0.2"
